Refactoring threading, adding virtual threads